Bug 291497 - The KDE '--config' command line option does not work
Summary: The KDE '--config' command line option does not work
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: 4.7
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-14 09:18 UTC by Cristian Oneț
Modified: 2012-02-14 12:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2012-01-14 09:18:20 UTC
Version:           4.7 (using KDE 4.7.4) 
OS:                Linux

While developing KMyMoney I've noticed that the '--config' KApplication option does not work as expected. The default configuration file (constructed base on the application name) is always used.

Reproducible: Always

Steps to Reproduce:
I'll take kdesvn as an example but any KDE application can be used
$ ls -al ~/.kde4/share/config/kdesvn*
# check the last modifcation time of the rc file
$ kdesvn --config kdesvntestrc
# change some config stuff and close the application
$ ls -al ~/.kde4/share/config/kdesvn*


Actual Results:  
After running the last command observe that:
1. there is no kdesvntestrc config file
2. kdesvnrc was the config file that was actually changed

Expected Results:  
1. a new 'kdesvntestrc' file should have been created
2. kdesvnrc should not have been changed
Comment 1 Cristian Oneț 2012-01-15 07:42:33 UTC
More info about the bug at this review request https://git.reviewboard.kde.org/r/103693/
Comment 2 David Faure 2012-02-14 12:42:40 UTC
Git commit 830f75a74e9cd11fe36c6388f205410fe89c1c74 by David Faure.
Committed on 14/02/2012 at 13:02.
Pushed by dfaure into branch 'KDE/4.8'.

Make the --config cmdline arg actually work, patch by Cristian Oneț.
FIXED-IN: 4.8.1
REVIEW: 103693

M  +6    -6    kdeui/kernel/kapplication.cpp

http://commits.kde.org/kdelibs/830f75a74e9cd11fe36c6388f205410fe89c1c74