Make the --config cmdline arg actually work, patch by Cristian Oneț.

BUG: 291497
FIXED-IN: 4.8.1
REVIEW: 103693